ref: Update Api docs
